--- a/layouts/section/talks.html
+++ b/layouts/section/talks.html
@@ -19,10 +19,10 @@
 			{{ .Description | markdownify }}
 		{{ if .Params.slides_url }}
 		</br>
-			<a style="box-shadow: 0 1px;" href="{{ .Params.slides_url }}">Slides</a>
+			<a style="box-shadow: 0 1px;" target="_blank" href="{{ .Params.slides_url }}">Slides</a>
 		{{ end }}
 		{{ if .Params.recording_url }}
-		and	<a style="box-shadow: 0 1px;" href="{{ .Params.recording_url }}">Recording</a>
+		and	<a style="box-shadow: 0 1px;" target="_blank" href="{{ .Params.recording_url }}">Recording</a>
 		{{ end }}
 		</div>
 		<footer class="entry-footer">
