--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,13 +1,11 @@
-<head>
 {{ if .Param "math" }}
-  {{ partialCached "math.html" . }}
-{{ end }}
-</head>
-{{ if .Store.Get "hasMermaid" }}
+{{ partialCached "math.html" . }}
+{{ end -}}
+{{- if .Store.Get "hasMermaid" -}}
 <script src="https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.min.js" integrity="sha256-pDvBr9RG+cTMZqxd1F0C6NZeJvxTROwO94f4jW3bb54=" crossorigin="anonymous"></script>
 <script>
   mermaid.initialize({
     startOnLoad: true,
   });
 </script>
-{{ end }}
+{{- end }}
