feat: track .js file with git-lfs and host external js locally
Signed-off-by: Clément Nussbaumer <clement.nussbaumer@postfinance.ch>

--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -1,4 +1,4 @@
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+<script id="MathJax-script" async src="{{ "/js/mathjax@3/tex-chtml.js" | urlize | relURL }}"></script>
 <script>
   MathJax = {
     tex: {
