--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -2,7 +2,7 @@
 {{ partialCached "math.html" . }}
 {{ end -}}
 {{- if .Store.Get "hasMermaid" -}}
-<script src="https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.min.js" integrity="sha256-pDvBr9RG+cTMZqxd1F0C6NZeJvxTROwO94f4jW3bb54=" crossorigin="anonymous"></script>
+<script src="{{ "/js/mermaid@11/mermaid.min.js" | urlize | relURL }}" integrity="sha256-pDvBr9RG+cTMZqxd1F0C6NZeJvxTROwO94f4jW3bb54=" crossorigin="anonymous"></script>
 <script>
   mermaid.initialize({
     startOnLoad: true,
