--- a/layouts/section/talks.html
+++ b/layouts/section/talks.html
@@ -6,14 +6,14 @@
 		</header>
 	    {{ range .Pages }}
 		<article class="post-entry" >
-		<figure class="entry-cover">
-			<img loading="lazy" src="{{ .Params.image }}" alt="">
+		<figure class="entry-cover" style="display: flex; justify-content: center;">
+			<img loading="lazy" src="{{ .Params.image }}" alt="" style="max-height: 300px; width: auto; object-fit: cover;">
 		</figure>
 		</figure>
 		<header>
-			<h2 class="entry-hint-parent" >
+			<h3 class="entry-hint-parent" >
 				{{ .LinkTitle }}
-			</h2>
+			</h3>
 		</header>
 		<div class="entry-content">
 			{{ .Description | markdownify }}
